<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Photo Caption</string>

    <string name="mode_edit">Edit Mode</string>
    <string name="mode_view">View Mode</string>
    <string name="mode_gallery">Gallery Mode</string>
    <string name="gallery">Gallery</string>
    <string name="edit">Edit</string>

    <string name="pc_capture">Capture Photo Caption</string>
    <string name="pc_edit">Edit Photo Caption</string>
    <string name="pc_gallery">Gallery Photo Caption</string>
    <string name="pc_view">View Photo Caption</string>
    <string name="pc_settings">Settings Photo Caption</string>

    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="capture">Capture</string>
    <string name="general">General</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="referencing">Make available in gallery</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="poweredby">Powered by</string>

    <string name="type_comment">Type a comment</string>

    <string name="adapter">ADAPTER</string>
    <string name="ask_save_description">Do you want to save your comment ?</string>
    <string name="ask_delete_image">Do you really want to delete this image ?</string>
    <string name="donotsave">Don\'t save</string>
    <string name="donotdelete">Don\'t delete</string>
    <string name="saved">Your comment has been saved !</string>
    <string name="deleted">The image has been deleted !</string>
    <string name="noapptoshot">No application found to take the shot</string>
    <string name="choose_cam">Choose your camera application to take the shot</string>
    <string name="not_able_to_perform">Photo Caption is not able to perform this action</string>
    <string name="choose_each_time">Choose each time</string>
    <string name="tagnotsaved">Failed to save the comment</string>
    <string name="shared_via_photocaption">Shared via PhotoCaption</string>
    <string name="referencing_performed">Photo Caption asked to reference this photo in your medias</string>
    <string name="referencing_available">Reference this image as android media via the menu</string>

    <string name="pref_binary_info_signalisation">Hide &lt;BINARY DATA&gt; info</string>
    <string name="pref_binary_info_signalisation_sum">Some binary datas can be hidden in the photo by some device constructors by using the same field that PhotoCaption. To inform user of existence of this binary datas PhotoCaption shows &lt;BINARY DATA&gt;</string>
    <string name="pref_view_action_bar">Display action bar</string>
    <string name="pref_view_action_bar_summ">Display action bar when opening view mode</string>
    <string name="pref_capture_camapp">Select camera application</string>
    <string name="pref_capture_camapp_summ">Choose the application to take shots</string>
    <string name="pref_capture_directory">Select Directory</string>
    <string name="pref_capture_directory_summ">Choose the directory you want to store your shots</string>
    <string name="pref_gallery_whole_caption">Entire captions</string>
    <string name="pref_gallery_whole_caption_summ">Display entire captions on gallery</string>
    <string name="pref_photocaption_sum">By Sébastien MICHEL</string>
    <string name="pref_photoview">PhotoView</string>
    <string name="pref_photoview_sum">By Chris Banes</string>
    <string name="pref_staggeredgridview">StaggeredGridView</string>
    <string name="pref_staggeredgridview_sum">By Maurycy Wojtowicz</string>

    <string name="pref_exif">Exif Fields</string>
    <string name="pref_gallery_exif_field">Fields displayed on Gallery Mode</string>
    <string name="pref_view_exif_field">Fields displayed on View Mode</string>
    <string name="pref_edit_exif_field">Field to edit</string>
    <string name="pref_gallery_exif_field_summ">Select Exif fields you want to see on gallery</string>
    <string name="pref_view_exif_field_summ">Select Exif fields you want to see on Viewer</string>
    <string name="pref_edit_exif_field_summ">Select the Exif field you want to edit</string>
</resources>
