<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/action_capture"
        android:title="@string/capture"
        android:icon="@android:drawable/ic_menu_camera"
        android:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <!--
        ic_menu_preferences=""
        -->
</menu>
